# computer_enhance

./: .gitignore  CMakeLists.txt
data/: template.json  test.json  test2.json  test3.json
docs/: notes.md
src/: CMakeLists.txt  decode.cpp  generate_data.cpp  generate_data.zig  haversine.c  haversine.h  haversine.zig  json.h  mem.c  mem.h  metrics.c  metrics.h  oldparse.c  parse.c  parse.h  parseJson.cpp  parser.c  parser.h  utils.c  utils.h
tests/: test10.json  test11.json  test4.json  test5.json  test6.json  test7.json
